# Sandchest

./: .env.example  .gitignore  .prettierignore  CLAUDE.md  Cargo.toml  README.md  bunfig.toml  docker-compose.yml  fly.toml  package.json  sst.config.ts  tsconfig.json  turbo.json
.agents/skills/: sandchest
.claude/skills/: sandchest
.github/workflows/: build-images.yml  ci.yml  deploy-api.yml  deploy-node.yml  deploy.yml  docker-build.yml  e2e.yml  export-skill.yml  migrate.yml  rust-build.yml  test-action.yml  workflows.test.ts
apps/admin/: next.config.ts  package.json  tsconfig.json
apps/api/: .dockerignore  Dockerfile  fly.toml  package.json  tsconfig.json
apps/docs/: mdx-components.tsx  package.json  tsconfig.json
apps/gateway/: package.json  tsconfig.json  wrangler.jsonc
apps/web/: REACT-AUDIT.md  astro.config.mjs  eslint.config.mjs  next.config.ts  package.json  tsconfig.json
crates/sandchest-agent/: Cargo.toml  build.rs
crates/sandchest-agent/src/: exec.rs  files.rs  main.rs  proc.rs  service.rs  session.rs  shutdown.rs  snapshot.rs  vsock.rs
crates/sandchest-node/: Cargo.toml  build.rs
crates/sandchest-node/src/: agent_client.rs  artifacts.rs  config.rs  disk.rs  events.rs  firecracker.rs  heartbeat.rs  id.rs  jailer.rs  main.rs  network.rs  provision.rs  router.rs  sandbox.rs  slot.rs  snapshot.rs
examples/: package.json  tsconfig.json
examples/integrations/: crewai.py  langchain.test.ts  langchain.ts  vercel-ai.test.ts  vercel-ai.ts
images/: Makefile  manifest.json
images/rootfs/: guest-network.sh  overlay-init.sh  sandchest-guest-agent.service
images/scripts/: build-rootfs.sh  build-toolchain.sh  create-snapshot.sh  fetch-kernel.sh  register-image.sh  validate-image.sh
images/toolchains/: bun.sh  go-1.22.sh  node-22.sh  python-3.12.sh
images/ubuntu-22.04-base/: README.md
infra/: alarms.test.ts  alarms.ts  app.test.ts  app.ts  bucket.test.ts  bucket.ts  cluster.test.ts  cluster.ts  node.test.ts  node.ts  oidc.test.ts  oidc.ts  redis.test.ts  redis.ts  vpc.test.ts  vpc.ts
patches/: drizzle-kit@0.31.9.patch
scripts/: db-up.ts
test/: preload.ts
(+522 files in other folders)
