[package]
name = "sandchest-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-stream = "0.1"
pin-project-lite = "0.2"
libc = "0.2"
nix = { version = "0.29", features = ["term", "process", "fs"] }
sha2 = "0.10"

[target.'cfg(target_os = "linux")'.dependencies]
tokio-vsock = { version = "0.4", optional = true }

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tempfile = "3"

[features]
default = []
vsock = ["tokio-vsock"]
